Improves on accessibility

--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -105,6 +105,7 @@
         android:id="@+id/time_lapsed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
         android:textStyle="bold"
@@ -116,6 +117,7 @@
         android:id="@+id/time_total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
         android:textStyle="bold"
