--- a/app/src/main/res/layout/view_current_event.xml
+++ b/app/src/main/res/layout/view_current_event.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    android:contentDescription="@string/active_event">
 
     <TextView
         android:layout_width="wrap_content"
@@ -38,7 +38,6 @@
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_play"
             android:background="@android:color/transparent"
-            android:contentDescription="@string/play"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
