--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -40,7 +40,26 @@
         app:layout_constraintTop_toTopOf="@+id/eclipse_img"
         app:layout_constraintBottom_toBottomOf="@+id/eclipse_img"
         app:layout_constraintLeft_toLeftOf="@+id/eclipse_img"
-        app:layout_constraintRight_toRightOf="@+id/eclipse_img" />
+        app:layout_constraintRight_toRightOf="@+id/eclipse_img"/>
+
+    <include
+        android:id="@+id/next_media_view"
+        layout="@layout/view_next_media"
+        android:visibility="gone"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/guideline"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="eclipse_img,next_media_view"/>
 
     <androidx.legacy.widget.Space
         android:id="@+id/space"
@@ -50,7 +69,7 @@
 
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eclipse_img" />
+        app:layout_constraintTop_toBottomOf="@+id/barrier" />
 
     <SeekBar
         android:id="@+id/audio_progress"
@@ -65,7 +84,7 @@
 
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/eclipse_img"/>
+        app:layout_constraintBottom_toBottomOf="@id/barrier"/>
 
     <ImageButton
         android:id="@+id/back_button"
@@ -86,11 +105,11 @@
         android:id="@+id/time_lapsed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:layout_marginStart="@dimen/default_margin"
-        android:layout_marginBottom="4dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/audio_progress"/>
 
@@ -98,12 +117,11 @@
         android:id="@+id/time_total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:layout_marginEnd="@dimen/default_margin"
-        android:layout_marginBottom="4dp"
-
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/audio_progress"/>
 
@@ -124,13 +142,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
             android:fontFamily="sans-serif-medium"
-            android:textSize="@dimen/title_text_size" />
+            android:textSize="@dimen/title_text_size"
+            tools:text="@string/first_contact"/>
 
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="@dimen/divider_size"
-            android:background="?attr/colorControlNormal"
+            android:background="?attr/dividerVertical"
             android:layout_marginTop="@dimen/default_margin"/>
 
         <ScrollView
