--- a/app/src/main/res/layout/layout_walkthrough_one.xml
+++ b/app/src/main/res/layout/layout_walkthrough_one.xml
@@ -18,7 +18,7 @@
         android:id="@+id/walkthrough_img"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:src="@drawable/logo_2"
+        android:src="@drawable/banner_logo"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:importantForAccessibility="no"
