--- a/app/src/main/res/layout/view_feature_description.xml
+++ b/app/src/main/res/layout/view_feature_description.xml
@@ -15,6 +15,7 @@
             android:layout_gravity="center"
             android:layout_margin="16dp"
             android:fontFamily="sans-serif-condensed"
-            android:textSize="@dimen/default_text_size" />
+            android:textSize="@dimen/default_text_size"
+            android:lineSpacingExtra="@dimen/extraLineSpace"/>
     </LinearLayout>
 </ScrollView>
