--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,6 @@
     <dimen name="seekbar_border_width">1dp</dimen>
 
     <dimen name="countdown_time_size">40dp</dimen>
+
+    <dimen name="extraLineSpace">4dp</dimen>
 </resources>
