--- a/app/src/main/res/layout/activity_language_selection.xml
+++ b/app/src/main/res/layout/activity_language_selection.xml
@@ -3,7 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.about.LanguageSelectionActivity">
+
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/app_bar"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/language_recycler"
