--- a/app/src/main/res/layout/activity_our_partners.xml
+++ b/app/src/main/res/layout/activity_our_partners.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.about.OurPartnersActivity">
-    <LinearLayout
+
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/app_bar"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/partners_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/partners_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
