--- a/app/src/main/res/layout/item_future_eclipse.xml
+++ b/app/src/main/res/layout/item_future_eclipse.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/default_margin">
+    android:layout_marginTop="@dimen/default_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,4 +52,4 @@
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
