--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical">
 
     <TextView
         android:id="@+id/title"
@@ -15,4 +16,4 @@
         android:maxLines="1"
         tools:text="Section Title"/>
 
-</androidx.cardview.widget.CardView>
+</FrameLayout>
