--- a/app/src/main/res/layout/activity_rumble_map_instructions.xml
+++ b/app/src/main/res/layout/activity_rumble_map_instructions.xml
@@ -52,6 +52,7 @@
             android:importantForAccessibility="yes">
 
             <TextView
+                style="@style/HeaderText2"
                 android:id="@+id/bottom_view_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -63,13 +64,13 @@
                 android:maxLines="1"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/rumble_map_how"
-                android:textSize="@dimen/title_text_size"
                 android:focusable="false"
                 app:autoSizeTextType="uniform"
                 app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="1sp"/>
 
             <TextView
+                style="@style/ParagraphText"
                 android:id="@+id/bottom_view_more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -78,9 +79,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
-                android:fontFamily="sans-serif"
                 android:text="@string/rumble_map_instructions"
-                android:textSize="@dimen/default_text_size"
                 android:focusable="false"/>
         </LinearLayout>
 
