--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -19,13 +19,12 @@
             android:focusable="true">
 
             <TextView
+                style="@style/TextAppearance.App.Body1"
                 android:id="@+id/eclipse_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="@dimen/default_text_size"
                 android:lineSpacingExtra="@dimen/extraLineSpace"/>
         </LinearLayout>
 
