--- a/app/src/main/res/layout/activity_legal_libraries.xml
+++ b/app/src/main/res/layout/activity_legal_libraries.xml
@@ -19,11 +19,10 @@
             android:orientation="vertical">
 
             <TextView
+                style="@style/HeaderText2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
                 android:text="@string/libs_in_use"
-                android:textSize="@dimen/title_text_size"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp" />
@@ -35,12 +34,11 @@
                 card_view:cardUseCompatPadding="true">
 
                 <TextView
+                    style="@style/ParagraphText"
                     android:id="@+id/license_details"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif"
                     android:text="@string/libraries_use_detail"
-                    android:textSize="@dimen/default_text_size"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp" />
@@ -48,11 +46,10 @@
             </com.google.android.material.card.MaterialCardView>
 
             <TextView
+                style="@style/HeaderText2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
                 android:text="@string/jsyn_lib"
-                android:textSize="@dimen/title_text_size"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp" />
