--- a/app/src/main/res/layout/activity_legal_license.xml
+++ b/app/src/main/res/layout/activity_legal_license.xml
@@ -22,12 +22,11 @@
             android:orientation="vertical">
 
             <TextView
+                style="@style/HeaderText2"
                 android:id="@+id/license_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
                 android:text="@string/app_name"
-                android:textSize="@dimen/title_text_size"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp" />
