--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -31,12 +31,11 @@
                 android:adjustViewBounds="true"/>
 
             <TextView
+                style="@style/ParagraphText"
                 android:id="@+id/about_us_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:fontFamily="sans-serif"
-                android:textSize="@dimen/default_text_size"
                 android:text="@string/about_us_details" />
 
             <View
