--- a/app/src/main/res/layout/item_feature.xml
+++ b/app/src/main/res/layout/item_feature.xml
@@ -57,6 +57,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <TextView
+                style="@style/HeaderText3"
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -65,8 +66,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:fontFamily="sans-serif-medium"
-                android:textSize="@dimen/default_text_size"
                 app:stringId="@{eclipse.title()}"/>
 
             <Button
