--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -7,12 +7,11 @@
     android:layout_gravity="center_vertical">
 
     <TextView
+        style="@style/HeaderText2"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="18sp"
         android:maxLines="2"
         tools:text="Section Title"/>
 
