--- a/app/src/main/res/layout/layout_countdown.xml
+++ b/app/src/main/res/layout/layout_countdown.xml
@@ -8,7 +8,7 @@
         android:orientation="vertical">
 
         <TextView
-            style="@style/EclipseCenterTitleText"
+            style="@style/HeaderText2"
             android:id="@+id/countdown_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
