--- a/app/src/main/res/layout/layout_eclipse_center.xml
+++ b/app/src/main/res/layout/layout_eclipse_center.xml
@@ -20,9 +20,7 @@
                 android:id="@+id/rl_eclipse_center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_margin"
-                android:layout_marginEnd="@dimen/default_margin"
-                android:layout_marginBottom="@dimen/margin_small"
+                android:layout_margin="@dimen/default_margin"
                 android:orientation="vertical"
                 android:gravity="center">
 
@@ -32,11 +30,10 @@
                     android:id="@+id/current_event_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/default_margin"
                     android:layout_marginBottom="@dimen/default_margin"/>
 
                 <TextView
-                    style="@style/EclipseCenterTitleText"
+                    style="@style/HeaderText2"
                     android:id="@+id/info_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -46,7 +43,8 @@
                     android:id="@+id/stub_type"
                     layout="@layout/layout_eclipse_center_row"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_extra_small"/>
 
                 <include
                     android:id="@+id/stub_date"
@@ -58,22 +56,24 @@
                 <org.eclipsesoundscapes.views.CountdownView
                     android:id="@+id/eclipse_countdown"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_margin"/>
 
                 <TextView
-                    style="@style/EclipseCenterTitleText"
+                    style="@style/HeaderText2"
                     android:id="@+id/next_eclipse_location_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/next_eclipse_user_location"
-                    android:layout_marginBottom="@dimen/margin_small"/>
+                    android:layout_marginTop="@dimen/default_margin"
+                    android:text="@string/next_eclipse_user_location"/>
 
                 <include
                     android:id="@+id/stub_percent"
                     layout="@layout/layout_eclipse_center_row"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/margin_small"/>
+                    android:layout_marginTop="@dimen/margin_extra_small"
+                    android:layout_marginBottom="@dimen/margin_extra_small"/>
 
                 <include
                     android:id="@+id/stub_duration"
