--- a/app/src/main/res/layout/layout_walkthrough_four.xml
+++ b/app/src/main/res/layout/layout_walkthrough_four.xml
@@ -61,17 +61,17 @@
             android:focusable="true">
 
             <TextView
+                style="@style/HeaderText2"
                 android:id="@+id/bottom_view_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"
-                android:fontFamily="sans-serif-medium"
                 android:text="@string/audio_descriptions"
-                android:textSize="21sp"
                 android:focusable="false"/>
 
             <TextView
+                style="@style/ParagraphText"
                 android:id="@+id/bottom_view_more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -80,9 +80,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
-                android:fontFamily="sans-serif"
                 android:text="@string/walkthrough_audio_description"
-                android:textSize="@dimen/default_text_size"
                 android:focusable="false"/>
 
         </LinearLayout>
