--- a/app/src/main/res/layout/view_current_event.xml
+++ b/app/src/main/res/layout/view_current_event.xml
@@ -8,16 +8,15 @@
     android:contentDescription="@string/active_event">
 
     <TextView
+        style="@style/ParagraphText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/default_margin"
         android:text="@string/active_event"/>
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/default_margin"
-        android:layout_marginEnd="@dimen/default_margin">
+        android:layout_marginTop="@dimen/margin_small">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
