--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="colorOnPrimary">@android:color/white</item>
         <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="preferenceTheme">@style/SettingsTheme</item>
     </style>
 
     <style name="AppTheme" parent="Base.AppTheme"/>
@@ -20,32 +21,27 @@
     </style>
 
     <style name="TextAppearance.App.SubTitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
-        <item name="fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">20sp</item>
-    </style>
-
-    <style name="TextAppearance.App.SubTitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
-        <item name="fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/default_text_size</item>
     </style>
 
     <style name="TextAppearance.App.Body1" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:textSize">@dimen/default_text_size</item>
     </style>
 
-    <style name="EclipseCenterTitleText" parent="Theme.MaterialComponents.DayNight">
-        <item name="android:layout_marginTop">@dimen/default_margin</item>
-        <item name="android:layout_marginBottom">@dimen/margin_extra_small</item>
-        <item name="android:textAppearance">@style/TextAppearance.App.SubTitle1</item>
-        <item name="android:gravity">start</item>
+    <style name="HeaderText2" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Headline6</item>
     </style>
 
-    <style name="EclipseCenterItemText" parent="Theme.MaterialComponents.DayNight">
-        <item name="android:textAppearance">@style/TextAppearance.App.SubTitle2</item>
+    <style name="HeaderText3" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:textAppearance">@style/TextAppearance.App.SubTitle1</item>
+    </style>
+
+    <style name="ParagraphText" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:textAppearance">@style/TextAppearance.App.Body1</item>
+    </style>
+
+    <style name="EclipseCenterLabelText" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:textAppearance">@style/TextAppearance.App.Body1</item>
         <item name="android:gravity">start</item>
         <item name="android:maxLines">2</item>
     </style>
@@ -54,5 +50,9 @@
         <item name="android:textAppearance">@style/TextAppearance.App.Body1</item>
         <item name="android:gravity">end</item>
         <item name="android:maxLines">2</item>
+    </style>
+
+    <style name="SettingsTheme" parent="PreferenceThemeOverlay">
+        <item name="android:textSize">@dimen/default_text_size</item>
     </style>
 </resources>
