Enables haptic feedback for view

--- a/app/src/main/res/layout/activity_rumble_map_interaction.xml
+++ b/app/src/main/res/layout/activity_rumble_map_interaction.xml
@@ -24,7 +24,8 @@
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:layout_centerInParent="true"
-            android:src="@drawable/eclipse_bailys_beads" />
+            android:src="@drawable/eclipse_bailys_beads"
+            android:hapticFeedbackEnabled="true"/>
     </RelativeLayout>
 
 </LinearLayout>
